# load-bal-llamaedge-demo

./: .gitignore  README.md  deployment.yaml  helm.README.md
.github/workflows/: CI.yml  CI.yml.old  do.yml
lb/: Cargo.toml
lb/src/: main.rs
load-balancer-llamaedge/: Cargo.toml
load-balancer-llamaedge/load_balancer_yaml/: test-service.yaml
load-balancer-llamaedge/src/: main.old.rs  main.rs  main.v0.rs
load-balancer-llamaedge/yaml/: bup.yaml  default-services-gh.yaml  default-services.yaml  load-balancer.yaml  test-service-gh.yaml
scripts/: setup.sh
wasi-nn-chart/: Chart.yaml  default-services-op.yaml  test-service-op.yaml  values-generator.sh  values.yaml
wasi-nn-chart/templates/: default-services.yaml  test-service.yaml
watcher/: .gitignore  Cargo.toml  Dockerfile  README.md
watcher/src/: main.rs
watcher/watcher_yaml/: deployment.yaml
watcher/yaml/: watcher.yaml
yaml/: default-services.yaml  load-balancer.yaml  test-service.yaml
