[package]
name = "load-balancer-llamaedge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "^1.36", features = [
    "sync",
    "macros",
    "io-util",
    "fs",
    "net",
    "rt",
    "time",
] }
futures = { version = "0.3.6", default-features = false, features = [
    "async-await",
    "std",
] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
