[package]
name = "load-balancer-llamaedge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio_wasi = { version = "1.25.2", features = ["full"] }

futures = { version = "0.3.6", default-features = false, features = [
    "async-await",
    "std",
] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"