[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.91", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_26"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
anyhow = "1.0.98"
serde_json = "1.0.142"
